--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-tradingview-widget": "^1.2.2",
+    "rebass": "^2.0.0-0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.3",
