Job triggering via MQ for faster response. Pretty rough so far. Needs refinding

--- a/oco-api/pom.xml
+++ b/oco-api/pom.xml
@@ -53,6 +53,10 @@
 			<artifactId>dropwizard-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.reflections</groupId>
 			<artifactId>reflections</artifactId>
 		</dependency>
