--- a/example-developer-mode-config.yml
+++ b/example-developer-mode-config.yml
@@ -6,9 +6,11 @@ auth:
   proxied: false #  Set this to true if you edploy to Heroku
   whitelistExpirySeconds: 7200
 database:
-  mongoClientURI: mongodb://jsmith:some-initial-password@192.168.99.100:27017 # Your mongoDB connection details.
+  mongoClientURI: mongodb://jsmith:some-initial-password@172.18.0.2:27017 # Your mongoDB connection details.
   mongoDatabase: oco # MongoDB database name.
   lockSeconds: 10
+mq:
+  clientURI: amqp://172.18.0.3
 exchanges:
 #  gdax-sandbox:
 #    apiKey: 
