Re-introduced chart with the right colours Made it resizable Tweaked colours to match tradingview

--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -9,11 +9,11 @@
     "js-base64": "^2.4.3",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
+    "re-resizable": "^4.4.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-tradingview-widget": "^1.2.2",
     "rebass": "^2.0.0-0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
