Set rabbitMQ property for use on Heroku

--- a/example-config.yml
+++ b/example-config.yml
@@ -12,6 +12,8 @@ database:
   mongoClientURI: ${MONGODB_URI}
   mongoDatabase: ${MONGO_DATABASE}
   lockSeconds: ${LOCK_SECONDS}
+mq:
+  clientURI: ${CLOUDAMQP_URL}
 exchanges:
   gdax-sandbox:
     apiKey: ${GDAX_SANDBOX_API_KEY}
