--- a/example-developer-mode-config-worker.yml
+++ b/example-developer-mode-config-worker.yml
@@ -1,10 +1,10 @@
 loopSeconds: 3
 auth:
-  userName: let # Basic authentication. Only safe over SSL.
-  password: mein
+  adminUserName: let # Basic authentication. Only safe over SSL.
+  adminPassword: mein
 #  secretKey: Generate this using com.grahamcrockford.oco.cli.GenerateSecretKey when you move to production
   proxied: false #  Set this to true if you edploy to Heroku
-  whitelistExpirySeconds: 7200
+  whitelistExpirySeconds: 14400
 database:
   mongoClientURI: mongodb://jsmith:some-initial-password@172.18.0.2:27017 # Your mongoDB connection details.
   mongoDatabase: oco # MongoDB database name.
