--- a/oco-ui/public/manifest.json
+++ b/oco-ui/public/manifest.json
@@ -4,6 +4,6 @@
   "icons": [ ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#aaa",
+  "background_color": "#131722"
 }
