--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 		<reflections.version>0.9.11</reflections.version>
 		<googleauth.version>1.1.5</googleauth.version>
 		<dockerfile-maven-version>1.4.0</dockerfile-maven-version>
+		<okta-jwt-verifier-version>0.3.0</okta-jwt-verifier-version>
 
 <!-- 		<frontend-maven-plugin-version>1.4</frontend-maven-plugin-version> -->
 <!-- 		<maven.shade.plugin.version>3.1.0</maven.shade.plugin.version> -->
@@ -217,7 +218,7 @@
 			<dependency>
 			    <groupId>com.okta.jwt</groupId>
 			    <artifactId>okta-jwt-verifier</artifactId>
-			    <version>0.3.0</version>
+			    <version>${okta-jwt-verifier-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
