FIx missing IP whitelist auth token in Heroku config

--- a/example-config.yml
+++ b/example-config.yml
@@ -4,6 +4,7 @@ auth:
   adminPassword: ${PASSWORD}
   proxied: ${PROXIED}
   whitelistExpirySeconds: 14400
+  secretKey: ${AUTH_TOKEN}
   okta:
     baseUrl: ${OKTA_BASEURL}
     issuer: ${OKTA_ISSUER}
