Working on websockets

--- a/oco-web/pom.xml
+++ b/oco-web/pom.xml
@@ -121,6 +121,10 @@
 		    <groupId>com.okta.jwt</groupId>
 		    <artifactId>okta-jwt-verifier</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.liveperson</groupId>
+		    <artifactId>dropwizard-websockets</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
