More refinement of package structure

--- a/oco-common/pom.xml
+++ b/oco-common/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>guice-assistedinject</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-servlet</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.google.auto.value</groupId>
 			<artifactId>auto-value</artifactId>
 		</dependency>
