--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^4.2.2",
     "rebass": "^2.0.0-0",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.3",
     "semantic-ui-css": "^2.3.1",
