Hardening of ticker socket connection. Now handles connection drops and state recovery, and the socket state is shown in the toolbar. Improved API to be JSON throughout. Removed animation on tickers; it was actually less clear than a simple flash which we now use. We now support multiple live tickers, which paves the way to show them against all the open coins. Dropped logging to debug level (only affects Chrome IIRC)

--- a/oco-web/pom.xml
+++ b/oco-web/pom.xml
@@ -34,6 +34,10 @@
 			<artifactId>guice-servlet</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.auto.value</groupId>
+			<artifactId>auto-value</artifactId>
+		</dependency>
+		<dependency>
 		    <groupId>com.liveperson</groupId>
 		    <artifactId>dropwizard-websockets</artifactId>
 		</dependency>
