--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "rebass": "^2.0.0-0",
+    "reconnecting-websocket": "^3.2.2",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
