--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -35,5 +35,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": {
+    "/": {
+      "target": "http://localhost:8080",
+      "ws": true
+    }
+  }
 }
