First stab at websocket authentication.  Based on a mix of approaches from https://github.com/ToastShaman/dropwizard-auth-jwt/issues/24 and https://github.com/LivePersonInc/dropwizard-websockets/issues/15. There MUST be a better way...

--- a/oco-common/pom.xml
+++ b/oco-common/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>dropwizard-client</artifactId>
 		</dependency>
 		<dependency>
+		    <groupId>com.liveperson</groupId>
+		    <artifactId>dropwizard-websockets</artifactId>
+		</dependency>
+		
+		<dependency>
 		    <groupId>com.okta.jwt</groupId>
 		    <artifactId>okta-jwt-verifier</artifactId>
 		</dependency>
