Fix main class on Worker

--- a/oco-worker/pom.xml
+++ b/oco-worker/pom.xml
@@ -20,7 +20,7 @@
 	<name>OCO Worker</name>
 	
 	<properties>
-		<mainClass>com.grahamcrockford.oco.core.WorkerApplication</mainClass>
+		<mainClass>com.grahamcrockford.oco.worker.WorkerApplication</mainClass>
 	</properties>
 
 	<dependencies>
