--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -10,9 +10,9 @@
     "immutable": "^3.8.2",
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
-    "re-resizable": "^4.4.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "rebass": "^2.0.0-0",
