Fix shonky proxy config in dev mode

--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -37,8 +37,11 @@
     "eject": "react-scripts eject"
   },
   "proxy": {
-    "/": {
-      "target": "http://localhost:8080",
+    "/api": {
+      "target": "http://localhost:8080"
+    },
+    "/ws": {
+      "target": "ws://localhost:8080",
       "ws": true
     }
   }
