Create all-in-one application

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@
 /oco-common/.settings/org.eclipse.jdt.apt.core.prefs
 /oco-common/.settings/org.eclipse.jdt.core.prefs
 /oco-common/.settings/org.eclipse.m2e.core.prefs
+/oco-all-in-one/my-config.yml
+/oco-all-in-one/.classpath
+/oco-all-in-one/.project
+/oco-all-in-one/.settings/org.eclipse.core.resources.prefs
+/oco-all-in-one/.settings/org.eclipse.jdt.apt.core.prefs
+/oco-all-in-one/.settings/org.eclipse.jdt.core.prefs
+/oco-all-in-one/.settings/org.eclipse.m2e.core.prefs
