--- a/oco-all-in-one/pom.xml
+++ b/oco-all-in-one/pom.xml
@@ -7,20 +7,20 @@
 		<maven>3.0.0</maven>
 	</prerequisites>
 
-	<artifactId>oco-web</artifactId>
+	<artifactId>oco-all-in-one</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>com.grahamcrockford</groupId>
-		<artifactId>oco-parent</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+        <groupId>com.grahamcrockford</groupId>
+        <artifactId>oco-parent</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
-	<name>OCO Web API</name>
-
+	<name>OCO All-In-One</name>
+	
 	<properties>
-		<mainClass>com.grahamcrockford.oco.web.WebApplication</mainClass>
+		<mainClass>com.grahamcrockford.oco.worker.AllInOneApplication</mainClass>
 	</properties>
 
 	<dependencies>
@@ -30,7 +30,7 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
