Add some simple mount/unmount animations and add some UI niceness to the alert view

--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -11,6 +11,7 @@
     "polished": "^1.9.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
