--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -17,7 +17,6 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.2",
-    "rebass": "^2.0.0-0",
     "reconnecting-websocket": "^3.2.2",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
@@ -25,6 +24,8 @@
     "seamless-immutable": "^7.1.3",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.78.3",
+    "styled-components": "^3.2.6",
+    "styled-system": "^2.2.5",
     "unstated": "^1.0.3",
     "whatwg-fetch": "^2.0.3"
   },
