--- a/pom.xml
+++ b/pom.xml
@@ -14,72 +14,80 @@
 
 	<modules>
 		<module>oco-worker</module>
-        <module>oco-common</module>
+		<module>oco-common</module>
 		<module>oco-web</module>
 		<module>oco-all-in-one</module>
 	</modules>
 
+	<repositories>
+		<repository>
+			<id>sonatype-oss-snapshot</id>
+			<snapshots />
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
+	</repositories>
+
 	<profiles>
-    	<profile>
+		<profile>
 			<id>web</id>
-          	<modules>
+			<modules>
 				<module>oco-common</module>
 				<module>oco-web</module>
-          	</modules> 
-     	 </profile>
+			</modules>
+		</profile>
 		<profile>
 			<id>worker</id>
-          	<modules>
-			  	<module>oco-common</module>
+			<modules>
+				<module>oco-common</module>
 				<module>oco-worker</module>
-          	</modules>
-     	</profile>
+			</modules>
+		</profile>
 		<profile>
 			<id>all-in-one</id>
-          	<modules>
-			  	<module>oco-common</module>
+			<modules>
+				<module>oco-common</module>
 				<module>oco-all-in-one</module>
-          	</modules>
-     	</profile>
-     	 <profile>
-		     <id>only-eclipse</id>
-		     <activation>
-		        <property>
-		         <name>m2e.version</name>
-		        </property>
-		     </activation>
-		     <build>
-		      <pluginManagement>
-		       <plugins>
-		         <plugin>
-		            <groupId>org.eclipse.m2e</groupId>
-		            <artifactId>lifecycle-mapping</artifactId>
-		            <version>1.0.0</version>
-		            <configuration>
-		                <lifecycleMappingMetadata>
-		                    <pluginExecutions>
-		                        <pluginExecution>
-		                            <pluginExecutionFilter>
-		                               <groupId>org.apache.maven.plugins</groupId>
-		                               <artifactId>maven-dependency-plugin</artifactId>
-		                               <versionRange>${maven-dependency-plugin.version}</versionRange>
-		                               <goals>
-		                                   <goal>copy-dependencies</goal>
-		                               </goals>
-		                            </pluginExecutionFilter>
-		                            <action>
-		                              <ignore />
-		                            </action>
-		                        </pluginExecution>
-		                    </pluginExecutions>
-		                </lifecycleMappingMetadata>
-		            </configuration>
-		        </plugin>
-		       </plugins>
-		      </pluginManagement>
-		     </build>
-		 </profile>
-  	</profiles>
+			</modules>
+		</profile>
+		<profile>
+			<id>only-eclipse</id>
+			<activation>
+				<property>
+					<name>m2e.version</name>
+				</property>
+			</activation>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.eclipse.m2e</groupId>
+							<artifactId>lifecycle-mapping</artifactId>
+							<version>1.0.0</version>
+							<configuration>
+								<lifecycleMappingMetadata>
+									<pluginExecutions>
+										<pluginExecution>
+											<pluginExecutionFilter>
+												<groupId>org.apache.maven.plugins</groupId>
+												<artifactId>maven-dependency-plugin</artifactId>
+												<versionRange>${maven-dependency-plugin.version}</versionRange>
+												<goals>
+													<goal>copy-dependencies</goal>
+												</goals>
+											</pluginExecutionFilter>
+											<action>
+												<ignore />
+											</action>
+										</pluginExecution>
+									</pluginExecutions>
+								</lifecycleMappingMetadata>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
 
 	<name>OCO</name>
 
@@ -87,35 +95,27 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<dropwizard.version>1.2.4</dropwizard.version>
-		<activemq.version>5.14.1</activemq.version>
+		<dropwizard.version>1.3.2</dropwizard.version>
 
-		<xchange.version>4.3.5</xchange.version>
-		<xchange.stream.version>4.3.2</xchange.stream.version>
+		<xchange.version>4.3.6</xchange.version>
+		<xchange.stream.version>4.3.3-SNAPSHOT</xchange.stream.version>
 
 		<streamex.version>0.6.6</streamex.version>
 		<guice.version>4.2.0</guice.version>
-		<autovalue.version>1.5.4</autovalue.version>
-		<rabbitmq.version>5.1.2</rabbitmq.version>
-		<mongo.version>3.6.3</mongo.version>
-		<mongojack.version>2.8.1</mongojack.version>
+		<autovalue.version>1.6</autovalue.version>
+		<rabbitmq.version>5.2.0</rabbitmq.version>
+		<mongo.version>3.7.0</mongo.version>
+		<mongojack.version>2.8.2</mongojack.version>
 		<reflections.version>0.9.11</reflections.version>
 		<googleauth.version>1.1.5</googleauth.version>
-		<dockerfile-maven-version>1.4.0</dockerfile-maven-version>
 		<okta-jwt-verifier-version>0.3.0</okta-jwt-verifier-version>
 		<dropwizard-websockets-version>1.2.2</dropwizard-websockets-version>
-
 
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
 		<maven-dependency-plugin-version>3.0.2</maven-dependency-plugin-version>
-		<jacoco.version>0.8.0</jacoco.version>
+		<jacoco.version>0.8.1</jacoco.version>
 		<mockito.version>1.10.19</mockito.version>
-
-		<!-- 		<frontend-maven-plugin-version>1.4</frontend-maven-plugin-version> -->
-		<!-- 		<maven.shade.plugin.version>3.1.0</maven.shade.plugin.version> -->
-		<!-- 		<maven.source.plugin.version>3.0.1</maven.source.plugin.version> -->
-		<!-- 		<maven.javadoc.plugin.version>3.0.0</maven.javadoc.plugin.version> -->
 
 	</properties>
 
@@ -139,29 +139,29 @@
 				<version>${xchange.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>info.bitrich.xchange-stream</groupId>
-			    <artifactId>xchange-stream-core</artifactId>
-			    <version>${xchange.stream.version}</version>
+				<groupId>info.bitrich.xchange-stream</groupId>
+				<artifactId>xchange-stream-core</artifactId>
+				<version>${xchange.stream.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>info.bitrich.xchange-stream</groupId>
-			    <artifactId>xchange-binance</artifactId>
-			    <version>${xchange.stream.version}</version>
+				<groupId>info.bitrich.xchange-stream</groupId>
+				<artifactId>xchange-binance</artifactId>
+				<version>${xchange.stream.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>info.bitrich.xchange-stream</groupId>
-			    <artifactId>xchange-bitfinex</artifactId>
-			    <version>${xchange.stream.version}</version>
+				<groupId>info.bitrich.xchange-stream</groupId>
+				<artifactId>xchange-bitfinex</artifactId>
+				<version>${xchange.stream.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>info.bitrich.xchange-stream</groupId>
-			    <artifactId>xchange-okcoin</artifactId>
-			    <version>${xchange.stream.version}</version>
+				<groupId>info.bitrich.xchange-stream</groupId>
+				<artifactId>xchange-okcoin</artifactId>
+				<version>${xchange.stream.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>info.bitrich.xchange-stream</groupId>
-			    <artifactId>xchange-gdax</artifactId>
-			    <version>${xchange.stream.version}</version>
+				<groupId>info.bitrich.xchange-stream</groupId>
+				<artifactId>xchange-gdax</artifactId>
+				<version>${xchange.stream.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.knowm.xchange</groupId>
@@ -225,6 +225,11 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
+				<groupId>com.google.auto.value</groupId>
+				<artifactId>auto-value-annotations</artifactId>
+				<version>${autovalue.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>${mockito.version}</version>
@@ -266,106 +271,106 @@
 				<version>${googleauth.version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>com.okta.jwt</groupId>
-			    <artifactId>okta-jwt-verifier</artifactId>
-			    <version>${okta-jwt-verifier-version}</version>
+				<groupId>com.okta.jwt</groupId>
+				<artifactId>okta-jwt-verifier</artifactId>
+				<version>${okta-jwt-verifier-version}</version>
 			</dependency>
 			<dependency>
-			    <groupId>com.liveperson</groupId>
-			    <artifactId>dropwizard-websockets</artifactId>
-			    <version>${dropwizard-websockets-version}</version>
+				<groupId>com.liveperson</groupId>
+				<artifactId>dropwizard-websockets</artifactId>
+				<version>${dropwizard-websockets-version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<build>
 		<plugins>
-<!-- 			<plugin> -->
-<!-- 		        <groupId>com.github.eirslett</groupId> -->
-<!-- 		        <artifactId>frontend-maven-plugin</artifactId> -->
-<!-- 		        <version>${frontend-maven-plugin-version}</version> -->
-<!-- 		        <configuration> -->
-<!-- 			        <installDirectory>oco-ui</installDirectory> -->
-<!-- 			    </configuration> -->
-<!-- 			    <executions> -->
-<!-- 				    <execution> -->
-<!-- 					    <id>npm install</id> -->
-<!-- 					    <goals> -->
-<!-- 					        <goal>npm</goal> -->
-<!-- 					    </goals> -->
-<!-- 					    <configuration> -->
-<!-- 					        <arguments>install</arguments> -->
-<!-- 					    </configuration> -->
-<!-- 					</execution> -->
-<!-- 					<execution> -->
-<!-- 					    <id>npm run build</id> -->
-<!-- 					    <goals> -->
-<!-- 					        <goal>npm</goal> -->
-<!-- 					    </goals> -->
-<!-- 					    <configuration> -->
-<!-- 					        <arguments>run build</arguments> -->
-<!-- 					    </configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 		    </plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.jacoco</groupId> -->
-<!-- 				<artifactId>jacoco-maven-plugin</artifactId> -->
-<!-- 				<version>${jacoco.version}</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>default-prepare-agent</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>prepare-agent</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 					<execution> -->
-<!-- 						<id>default-report</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>report</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 					<execution> -->
-<!-- 						<id>default-check</id> -->
-<!-- 						<goals> -->
-<!-- 							<goal>check</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<rules> -->
-<!-- 								implementation is needed only for Maven 2 -->
-<!-- 								<rule implementation="org.jacoco.maven.RuleConfiguration"> -->
-<!-- 									<element>BUNDLE</element> -->
-<!-- 									<limits> -->
-<!-- 										implementation is needed only for Maven 2 -->
-<!-- 										<limit implementation="org.jacoco.report.check.Limit"> -->
-<!-- 											<counter>COMPLEXITY</counter> -->
-<!-- 											<value>COVEREDRATIO</value> -->
-<!-- 											<minimum>0.60</minimum> -->
-<!-- 										</limit> -->
-<!-- 									</limits> -->
-<!-- 								</rule> -->
-<!-- 							</rules> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>com.github.eirslett</groupId> -->
+			<!-- <artifactId>frontend-maven-plugin</artifactId> -->
+			<!-- <version>${frontend-maven-plugin-version}</version> -->
+			<!-- <configuration> -->
+			<!-- <installDirectory>oco-ui</installDirectory> -->
+			<!-- </configuration> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <id>npm install</id> -->
+			<!-- <goals> -->
+			<!-- <goal>npm</goal> -->
+			<!-- </goals> -->
+			<!-- <configuration> -->
+			<!-- <arguments>install</arguments> -->
+			<!-- </configuration> -->
+			<!-- </execution> -->
+			<!-- <execution> -->
+			<!-- <id>npm run build</id> -->
+			<!-- <goals> -->
+			<!-- <goal>npm</goal> -->
+			<!-- </goals> -->
+			<!-- <configuration> -->
+			<!-- <arguments>run build</arguments> -->
+			<!-- </configuration> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.jacoco</groupId> -->
+			<!-- <artifactId>jacoco-maven-plugin</artifactId> -->
+			<!-- <version>${jacoco.version}</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <id>default-prepare-agent</id> -->
+			<!-- <goals> -->
+			<!-- <goal>prepare-agent</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- <execution> -->
+			<!-- <id>default-report</id> -->
+			<!-- <goals> -->
+			<!-- <goal>report</goal> -->
+			<!-- </goals> -->
+			<!-- </execution> -->
+			<!-- <execution> -->
+			<!-- <id>default-check</id> -->
+			<!-- <goals> -->
+			<!-- <goal>check</goal> -->
+			<!-- </goals> -->
+			<!-- <configuration> -->
+			<!-- <rules> -->
+			<!-- implementation is needed only for Maven 2 -->
+			<!-- <rule implementation="org.jacoco.maven.RuleConfiguration"> -->
+			<!-- <element>BUNDLE</element> -->
+			<!-- <limits> -->
+			<!-- implementation is needed only for Maven 2 -->
+			<!-- <limit implementation="org.jacoco.report.check.Limit"> -->
+			<!-- <counter>COMPLEXITY</counter> -->
+			<!-- <value>COVEREDRATIO</value> -->
+			<!-- <minimum>0.60</minimum> -->
+			<!-- </limit> -->
+			<!-- </limits> -->
+			<!-- </rule> -->
+			<!-- </rules> -->
+			<!-- </configuration> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
 		</plugins>
 	</build>
 
-<!--  	<reporting> -->
-<!-- 		<plugins> -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-project-info-reports-plugin</artifactId> -->
-<!-- 				<version>2.8.1</version> -->
-<!-- 				<configuration> -->
-<!-- 					<dependencyLocationsEnabled>false</dependencyLocationsEnabled> -->
-<!-- 					<dependencyDetailsEnabled>false</dependencyDetailsEnabled> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-javadoc-plugin</artifactId> -->
-<!-- 				<version>2.10.3</version> -->
-<!-- 			</plugin> -->
-<!-- 		</plugins> -->
-<!-- 	</reporting>  -->
+	<!-- <reporting> -->
+	<!-- <plugins> -->
+	<!-- <plugin> -->
+	<!-- <artifactId>maven-project-info-reports-plugin</artifactId> -->
+	<!-- <version>2.8.1</version> -->
+	<!-- <configuration> -->
+	<!-- <dependencyLocationsEnabled>false</dependencyLocationsEnabled> -->
+	<!-- <dependencyDetailsEnabled>false</dependencyDetailsEnabled> -->
+	<!-- </configuration> -->
+	<!-- </plugin> -->
+	<!-- <plugin> -->
+	<!-- <artifactId>maven-javadoc-plugin</artifactId> -->
+	<!-- <version>2.10.3</version> -->
+	<!-- </plugin> -->
+	<!-- </plugins> -->
+	<!-- </reporting> -->
 </project>
