Rename ticker package to marketdata

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 /oco-all-in-one/.settings/org.eclipse.jdt.apt.core.prefs
 /oco-all-in-one/.settings/org.eclipse.jdt.core.prefs
 /oco-all-in-one/.settings/org.eclipse.m2e.core.prefs
+/target/
