--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -16,11 +16,13 @@
     "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-table": "^6.8.2",
     "reconnecting-websocket": "^3.2.2",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "seamless-immutable": "^7.1.3",
     "semantic-ui-css": "^2.3.1",
     "semantic-ui-react": "^0.78.3",
