--- a/example-developer-mode-config-worker.yml
+++ b/example-developer-mode-config-worker.yml
@@ -39,6 +39,5 @@ server:
     type: http
     port: 8081
 logging:
-#  level: TRACE
-# loggers:
-#   com.grahamcrockford.oco: DEBUG
+  loggers:
+    "com.grahamcrockford.oco": INFO
