--- a/example-config.yml
+++ b/example-config.yml
@@ -53,3 +53,4 @@ logging:
   loggers:
     "com.grahamcrockford.oco": ${LOG_LEVEL}
     "info.bitrich.xchangestream.service.netty": ${LOG_LEVEL}
+    "info.bitrich.xchangestream.binance": ${LOG_LEVEL}
