Conditional rendering of expensive components - only if tab is visible. Not sure this works yet!

--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -43,6 +43,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.6",
+    "react-page-visibility": "^3.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
