Add useful script for launching dev mode backend

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@
 /oco-all-in-one/.settings/org.eclipse.jdt.core.prefs
 /oco-all-in-one/.settings/org.eclipse.m2e.core.prefs
 /target/
+/oco-common/.settings/org.jboss.tools.maven.apt.prefs
