--- a/oco-ui/package.json
+++ b/oco-ui/package.json
@@ -51,6 +51,7 @@
     "recompose": "^0.27.1",
     "reconnecting-websocket": "^3.2.2",
     "redux": "^3.7.2",
+    "redux-batched-actions": "^0.3.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "resolve": "1.6.0",
