Wilfully low thread count in the hope that this starts reducing the Heroku memory issues

--- a/example-config.yml
+++ b/example-config.yml
@@ -48,6 +48,7 @@ server:
     port: 8080
   requestLog:
     appenders: []
+  maxThreads: 16
 jerseyClient:
   timeout: 15000ms
   connectionTimeout: 15000ms
