--- a/docker-config.yml
+++ b/docker-config.yml
@@ -14,6 +14,7 @@ server:
   connector:
     type: http
     port: 8080
+  maxThreads: 16
 jerseyClient:
   timeout: 5000ms
   connectionTimeout: 5000ms
