--- a/example-developer-mode-config-allinone.yml
+++ b/example-developer-mode-config-allinone.yml
@@ -4,27 +4,32 @@ auth:
   proxied: false #  Set this to true if you deploy to Heroku
   whitelistExpirySeconds: 14400
 #database:
-#  mongoClientURI: mongodb://jsmith:some-initial-password@localhost:27017 # Your mongoDB connection details.
-#  mongoDatabase: oco # MongoDB database name.
+#  mongoClientURI: mongodb://jsmith:some-initial-password@localhost:27017/yourdb # Your mongoDB connection details.
 #  lockSeconds: 10
 # telegram:
 #   botToken: YOU
 #   chatId: REALLYWANTTHIS
 exchanges:
-#  gdax-sandbox:
-#    apiKey: 
-#    secretKey: 
-#    passphrase: 
-#  gdax:
-#    apiKey: 
-#    secretKey: 
-#    passphrase: 
-#  binance:
-#    apiKey:
-#    secretKey: 
-#  kucoin:
-#    apiKey: 
-#    secretKey:
+  gdax-sandbox:
+    apiKey: 
+    secretKey: 
+    passphrase: 
+  gdax:
+    apiKey: 
+    secretKey: 
+    passphrase: 
+  binance:
+    apiKey: 
+    secretKey:
+  kucoin:
+    apiKey: 
+    secretKey: 
+  cryptopia:
+    apiKey: 
+    secretKey: 
+  bitfinex:
+    apiKey: 
+    secretKey: 
 jerseyClient:
   timeout: 5000ms
   connectionTimeout: 5000ms
