Include a full build of the UI within the web API application

--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,23 @@
 /my-config.yml
 /orko-worker/my-config.yml
 /orko-web/my-config.yml
-/orko-api/.classpath
-/orko-api/.factorypath
-/orko-api/.project
-/.project
-/.settings/org.eclipse.core.resources.prefs
-/.settings/org.eclipse.m2e.core.prefs
-/orko-api/.settings/org.eclipse.core.resources.prefs
-/orko-api/.settings/org.eclipse.jdt.apt.core.prefs
-/orko-api/.settings/org.eclipse.jdt.core.prefs
-/orko-api/.settings/org.eclipse.m2e.core.prefs
-/orko-web/.classpath
-/orko-web/.factorypath
-/orko-web/.project
-/orko-web/.settings/org.eclipse.core.resources.prefs
-/orko-web/.settings/org.eclipse.jdt.apt.core.prefs
-/orko-web/.settings/org.eclipse.jdt.core.prefs
-/orko-web/.settings/org.eclipse.m2e.core.prefs
-/orko-worker/.classpath
-/orko-worker/.factorypath
-/orko-worker/.project
-/orko-worker/.settings/org.eclipse.core.resources.prefs
-/orko-worker/.settings/org.eclipse.jdt.apt.core.prefs
-/orko-worker/.settings/org.eclipse.jdt.core.prefs
-/orko-worker/.settings/org.eclipse.m2e.core.prefs
+**/.classpath
+**/.factorypath
+**/.project
+**/.settings/org.eclipse.core.resources.prefs
+**/.settings/org.eclipse.jdt.apt.core.prefs
+**/.settings/org.eclipse.jdt.core.prefs
+**/.settings/org.eclipse.m2e.core.prefs
+**/.settings/org.jboss.tools.maven.apt.prefs
+
 /orko-api/dependency-reduced-pom.xml
 /orko-web/dependency-reduced-pom.xml
 /orko-worker/dependency-reduced-pom.xml
 /target/orko-parent-0.0.1-SNAPSHOT-shaded.pom
-/.classpath
-/.factorypath
-/.settings/org.eclipse.jdt.apt.core.prefs
-/.settings/org.eclipse.jdt.core.prefs
-/.settings/org.jboss.tools.maven.apt.prefs
-/orko-api/.settings/org.jboss.tools.maven.apt.prefs
-/orko-web/.settings/org.jboss.tools.maven.apt.prefs
-/orko-worker/.settings/org.jboss.tools.maven.apt.prefs
-/orko-common/.classpath
-/orko-common/.factorypath
-/orko-common/.project
-/orko-common/.settings/org.eclipse.core.resources.prefs
-/orko-common/.settings/org.eclipse.jdt.apt.core.prefs
-/orko-common/.settings/org.eclipse.jdt.core.prefs
-/orko-common/.settings/org.eclipse.m2e.core.prefs
+
+
 /orko-all-in-one/my-config.yml
-/orko-all-in-one/.classpath
-/orko-all-in-one/.project
-/orko-all-in-one/.settings/org.eclipse.core.resources.prefs
-/orko-all-in-one/.settings/org.eclipse.jdt.apt.core.prefs
-/orko-all-in-one/.settings/org.eclipse.jdt.core.prefs
-/orko-all-in-one/.settings/org.eclipse.m2e.core.prefs
 /target/
 /orko-common/.settings/org.jboss.tools.maven.apt.prefs
+/orko-ui/.settings
+/orko-ui/node
