--- a/orko-all-in-one/pom.xml
+++ b/orko-all-in-one/pom.xml
@@ -29,6 +29,19 @@
 			<artifactId>orko-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.grahamcrockford</groupId>
+			<artifactId>orko-ui</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-assets</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.tuckey</groupId>
+		    <artifactId>urlrewritefilter</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
