--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>orko-worker</module>
 		<module>orko-common</module>
 		<module>orko-web</module>
+		<module>orko-ui</module>
 		<module>orko-all-in-one</module>
 	</modules>
 
@@ -49,6 +50,7 @@
 			<id>all-in-one</id>
 			<modules>
 				<module>orko-common</module>
+				<module>orko-ui</module>
 				<module>orko-all-in-one</module>
 			</modules>
 		</profile>
@@ -114,10 +116,13 @@
 		<googleauth.version>1.1.5</googleauth.version>
 		<okta-jwt-verifier-version>0.3.0</okta-jwt-verifier-version>
 		<dropwizard-websockets-version>1.3.2</dropwizard-websockets-version>
+		<urlrewritefilter.version>4.0.4</urlrewritefilter.version>
 
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
 		<maven-dependency-plugin-version>3.0.2</maven-dependency-plugin-version>
+		<maven-resources-plugin-version>3.1.0</maven-resources-plugin-version>
+		<frontend-maven-plugin-version>1.6</frontend-maven-plugin-version>
 		<jacoco.version>0.8.1</jacoco.version>
 		<mockito.version>1.10.19</mockito.version>
 	</properties>
@@ -130,6 +135,11 @@
 				<version>${dropwizard.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+			    <groupId>org.tuckey</groupId>
+			    <artifactId>urlrewritefilter</artifactId>
+			    <version>${urlrewritefilter.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.ws.rs</groupId>
