--- a/example-config.yml
+++ b/example-config.yml
@@ -39,7 +39,8 @@ exchanges:
     secretKey: ${CRYPTOPIA_SECRET}
 server:
   type: simple
-  applicationContextPath: /api/
+  rootPath: /api/
+  applicationContextPath: /
   connector:
     type: http
     port: 8080
