--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -82,7 +82,7 @@
 				<executions>
 					<execution>
 						<id>copy-resource-one</id>
-						<phase>install</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>copy-resources</goal>
 						</goals>
