--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -44,6 +44,7 @@
 				<executions>
 
 					<execution>
+						<phase>compile</phase>
 						<id>install node and npm</id>
 						<goals>
 							<goal>install-node-and-npm</goal>
@@ -55,6 +56,7 @@
 					</execution>
 
 					<execution>
+						<phase>compile</phase>
 						<id>npm install</id>
 						<goals>
 							<goal>npm</goal>
@@ -65,6 +67,7 @@
 					</execution>
 
 					<execution>
+						<phase>compile</phase>
 						<id>npm run build</id>
 						<goals>
 							<goal>npm</goal>
