Configuration for HTTPS redirection

--- a/orko-all-in-one/heroku-config.yml
+++ b/orko-all-in-one/heroku-config.yml
@@ -1,5 +1,6 @@
 loopSeconds: ${LOOP_SECONDS}
 auth:
+  httpsOnly: true
   proxied: ${PROXIED}
   whitelistExpirySeconds: 14400
   secretKey: ${AUTH_TOKEN}
