--- a/orko-worker/example-config.yml
+++ b/orko-worker/example-config.yml
@@ -1,5 +1,6 @@
 loopSeconds: 3
 auth:
+  httpsOnly: false
 #  secretKey: Generate this using com.grahamcrockford.orko.cli.GenerateSecretKey when you move to production
   proxied: false #  Set this to true if you edploy to Heroku
   whitelistExpirySeconds: 14400
