Allow configurable whitelist expiry

--- a/orko-all-in-one/heroku-config.yml
+++ b/orko-all-in-one/heroku-config.yml
@@ -2,7 +2,7 @@ loopSeconds: ${LOOP_SECONDS}
 auth:
   httpsOnly: true
   proxied: ${PROXIED}
-  whitelistExpirySeconds: 14400
+  whitelistExpirySeconds: ${WHITELIST_EXPIRY_SECONDS}
   secretKey: ${AUTH_TOKEN}
   okta:
     baseUrl: ${OKTA_BASEURL}
